--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,14 +24,14 @@ jobs:
         with:
           submodules: recursive
 
-      - uses: volta-cli/action@v1
+      - uses: volta-cli/action@v3
 
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
         with:
           version: nightly
 
-      - run: yarn install --network-concurrency 1
+      - run: yarn install
 
       - run: yarn build
   tests:
@@ -48,7 +48,7 @@ jobs:
         with:
           version: nightly
 
-      - run: yarn install --network-concurrency 1
+      - run: yarn install
 
       - name: Run tests
         run: yarn test
