Update forge-std and script

--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -22,6 +22,11 @@
 
 [rpc_endpoints]
   mainnet = "${ETH_RPC_URL}"
+  optimism = "${OPTIMISM_RPC_URL}"
+  arbitrum = "${ARBITRUM_RPC_URL}"
+  polygon = "${POLYGON_RPC_URL}"
+  sepolia = "${SEPOLIA_RPC_URL}"
+  goerli = "${GOERLI_RPC_URL}"
 
 [fmt]
   bracket_spacing = false
