Change rpc var name

--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -23,7 +23,7 @@
 [rpc_endpoints]
   arbitrum = "${ARBITRUM_ONE_RPC_URL}"
   goerli = "${GOERLI_RPC_URL}"
-  mainnet = "${ETH_RPC_URL}"
+  mainnet = "${MAINNET_RPC_URL}"
   optimism = "${OPTIMISM_RPC_URL}"
   polygon = "${POLYGON_RPC_URL}"
   sepolia = "${SEPOLIA_RPC_URL}"
