Add deploy script for batch send contracts (#504)
* Update forge-std and script

* Run scopelint fmt

* Reorganize scripts

* Move setFallbackToDefaultRpcUrls out of loop

* Compute contract address inside script to simplify deploy command

* Add documentation

* Add additional comments

* Merge scripts and fix nits

* Update script

* Run scopelint fmt

* Cleanup

* Add test draft

* Update test

* Cleanup

* Update script and test

* Fix another expectCall in UmbraBatchSendTest

* Change rpc var name

* Update CI

* Update README

* Fix nit in README

* Update README

* Update README

--- a/contracts-periphery/foundry.toml
+++ b/contracts-periphery/foundry.toml
@@ -21,7 +21,12 @@
   invariant = { runs = 1000 }
 
 [rpc_endpoints]
-  mainnet = "${ETH_RPC_URL}"
+  arbitrum = "${ARBITRUM_ONE_RPC_URL}"
+  goerli = "${GOERLI_RPC_URL}"
+  mainnet = "${MAINNET_RPC_URL}"
+  optimism = "${OPTIMISM_RPC_URL}"
+  polygon = "${POLYGON_RPC_URL}"
+  sepolia = "${SEPOLIA_RPC_URL}"
 
 [fmt]
   bracket_spacing = false
