--- a/contracts-periphery/.env.example
+++ b/contracts-periphery/.env.example
@@ -2,6 +2,6 @@ MAINNET_RPC_URL=yourMainnetRpcUrlHere
 POLYGON_RPC_URL=
 OPTIMISM_RPC_URL=
 ARBITRUM_ONE_RPC_URL=
+GNOSIS_CHAIN_RPC_URL=
 SEPOLIA_RPC_URL=
 GOERLI_RPC_URL=
-
