--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "ethers": "5.7.2",
     "localforage": "^1.10.0",
     "quasar": "2.10.2",
+    "unicode-confusables": "0.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "4.1.6",
     "vue": "3.2.45",
