--- a/umbra-js/.env.example
+++ b/umbra-js/.env.example
@@ -2,5 +2,5 @@ ETHERSCAN_API_KEY=yourEtherscanApiKey
 OPTIMISTIC_ETHERSCAN_API_KEY=yourOptimisticEtherscanApiKey
 POLYGONSCAN_API_KEY=yourPolygonscanApiKey
 ARBISCAN_API_KEY=yourArbiscanApiKey
-
+GNOSISSCAN_API_KEY=yourGnosisSafeScanApiKey
 INFURA_ID=zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
