--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@unstoppabledomains/resolution": "8.3.1",
     "@web3-onboard/coinbase": "^2.2.0",
     "@web3-onboard/core": "^2.11.1",
+    "@web3-onboard/gnosis": "2.1.10",
     "@web3-onboard/injected-wallets": "^2.4.0",
     "@web3-onboard/ledger": "^2.3.2",
     "@web3-onboard/trezor": "^2.3.2",
