--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@adraffy/ens-normalize": "1.9.2",
     "@ledgerhq/devices": "^7.0.5",
     "@metamask/jazzicon": "^2.0.0",
     "@quasar/extras": "^1.15.8",
@@ -34,7 +35,6 @@
     "ethers": "5.7.2",
     "localforage": "^1.10.0",
     "quasar": "2.10.2",
-    "unicode-confusables": "0.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "4.1.6",
     "vue": "3.2.45",
