--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -9,6 +9,7 @@ FORTMATIC_API_KEY=yourKeyHere
 PORTIS_API_KEY=yourKeyHere
 
 MAINNET_RPC_URL=yourRpcUrlHere
+WALLET_CONNECT_PROJECT_ID=yourId
 
 LOG_LEVEL=DEBUG
 MAINTENANCE_MODE_SEND=0
