--- a/contracts-core/package.json
+++ b/contracts-core/package.json
@@ -19,10 +19,11 @@
     "@openzeppelin/test-helpers": "^0.5.10",
     "@truffle/debug-utils": "^4.1.1",
     "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^8.0.3",
     "@types/chai": "^4.2.13",
     "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.11.8",
+    "@types/node": "^18.17.0",
     "chai": "^4.2.0",
     "commitizen": "^4.2.1",
     "concurrently": "^5.3.0",
@@ -35,7 +36,6 @@
     "fs-extra": "^9.0.1",
     "hardhat": "^2.6.8",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-typechain": "^0.3.3",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
