--- a/contracts-core/package.json
+++ b/contracts-core/package.json
@@ -10,7 +10,6 @@
     "@commitlint/config-conventional": "^9.1.2",
     "@ethersproject/abstract-signer": "^5.5.0",
     "@ethersproject/bignumber": "^5.5.0",
-    "@ethersproject/bytes": "5.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
@@ -74,7 +73,7 @@
     "prettier:list-different": "prettier --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true yarn test",
-    "typechain": "hardhat typechain --verbose",
+    "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
     "deploy": "yarn build && hardhat run scripts/deploy.js",
     "deploy:registry": "yarn build && hardhat run scripts/deploy-registry.js",
