--- a/contracts-core/package.json
+++ b/contracts-core/package.json
@@ -18,10 +18,11 @@
     "@openzeppelin/test-helpers": "^0.5.10",
     "@truffle/debug-utils": "^4.1.1",
     "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^8.0.3",
     "@types/chai": "^4.2.13",
     "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.11.8",
+    "@types/node": "^18.17.0",
     "chai": "^4.2.0",
     "commitizen": "^4.2.1",
     "concurrently": "^5.3.0",
@@ -32,9 +33,8 @@
     "ethereum-waffle": "^3.2.0",
     "ethers": "5.7.2",
     "fs-extra": "^9.0.1",
-    "hardhat": "^2.6.8",
+    "hardhat": "^2.17.1",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-typechain": "^0.3.3",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
@@ -46,7 +46,7 @@
     "solidity-coverage": "^0.7.12",
     "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
-    "typechain": "^8.1.1",
+    "typechain": "^8.3.1",
     "typescript": "^3.9.7"
   },
   "files": [
