--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "declarationMap": true,
+    "skipLibCheck": true,
     "outDir": "build",
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
