--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -44,7 +44,8 @@
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.20.35"
+    "typedoc": "^0.20.35",
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "ethereum",
