Remove skipLibCheck from umbra

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "outDir": "build",
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "module": "es2020",
     "target": "es2020",
     "moduleResolution": "node",
