copy typechain into umbra-js

--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ext .js,.ts ./",
     "prettier": "prettier --write .",
     "watch": "tsc --watch",
-    "build": "tsc --build",
+    "build": "cp -r ../contracts-core/typechain ./src && tsc --build",
     "clean": "rimraf build coverage .nyc_output cache",
     "prepare": "yarn build",
     "prepublishOnly": "yarn lint && yarn test",
