Upgrade wallet libs (#588)
* Changes

* Upgrade all libraries

* Remove console log

* Maybe try bumping

* Revert "Maybe try bumping"

This reverts commit cc87b278d2ba60c3ca2912a260acbfad2b7d6215.

* Revert "Changes"

This reverts commit 95fa82858879d4209765535b08e011dfa5275d17.

* Revert "Revert "Changes""

This reverts commit 97afd935c2a7443ebc97cd3f4028a960f726216d.

* skipLibCheck

* Remove skipLibCheck

* Remove skipLibCheck from umbra

* Node version

* Update ci

* yarn list

* Remove trezor

* Downgrade trezor

* Cache false

* Add typeRoot

* Change logo to an svg

* Add gradient back

* Change walletconnect plugin

* Fix failing test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,13 +31,16 @@ jobs:
           submodules: recursive
 
       - uses: volta-cli/action@v4
+        with:
+          cache: false
 
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
         with:
           version: nightly
 
-      - run: yarn install --network-concurrency 1
+      - run: yarn list
+      - run: yarn install --frozen-lockfile --verbose --network-concurrency 1
 
       - run: yarn build
   tests:
