--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,12 @@
     "@umbracash/umbra-js": "^0.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@unstoppabledomains/resolution": "8.5.0",
-    "@web3-onboard/coinbase": "^2.2.0",
-    "@web3-onboard/core": "^2.11.1",
-    "@web3-onboard/injected-wallets": "^2.4.0",
-    "@web3-onboard/ledger": "^2.3.2",
+    "@web3-onboard/coinbase": "^2.2.5",
+    "@web3-onboard/core": "^2.21.0",
+    "@web3-onboard/injected-wallets": "^2.10.4",
+    "@web3-onboard/ledger": "^2.5.2",
     "@web3-onboard/trezor": "^2.3.2",
-    "@web3-onboard/walletconnect": "^2.4.1",
+    "@web3-onboard/walletconnect": "2.4.1",
     "bnc-notify": "^1.5.1",
     "core-js": "^3.6.5",
     "ethers": "5.7.2",
