--- a/.github/workflows/fleek-deploy.yaml
+++ b/.github/workflows/fleek-deploy.yaml
@@ -1,5 +1,8 @@
 name: Deploy site via Fleek
-on: push
+on:
+  push:
+    branches:
+      - master
 jobs:
   deploy-to-fleek:
     runs-on: ubuntu-latest
