Update .env.example and README.md files for both frontend and umbra-js

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,6 +10,10 @@ PORTIS_API_KEY=yourKeyHere
 
 MAINNET_RPC_URL=yourRpcUrlHere
 POLYGON_RPC_URL=yourRpcUrlHere
+OPTIMISM_RPC_URL=yourRpcUrlHere
+GNOSIS_CHAIN_RPC_URL=yourRpcUrlHere
+ARBITRUM_ONE_RPC_URL=yourRpcUrlHere
+SEPOLIA_RPC_URL=yourSepoliaRpcUrl
 WALLET_CONNECT_PROJECT_ID=yourId
 
 LOG_LEVEL=DEBUG
