--- a/umbra-js/.env.example
+++ b/umbra-js/.env.example
@@ -4,3 +4,9 @@ POLYGONSCAN_API_KEY=yourPolygonscanApiKey
 ARBISCAN_API_KEY=yourArbiscanApiKey
 GNOSISSCAN_API_KEY=yourGnosisSafeScanApiKey
 INFURA_ID=zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+MAINNET_RPC_URL=yourMainnetRpcUrl
+OPTIMISM_RPC_URL=yourOptimismRpcUrl
+GNOSIS_CHAIN_RPC_URL=yourGnosisChainRpcUrl
+POLYGON_RPC_URL=yourPolygonRpcUrl
+ARBITRUM_ONE_RPC_URL=yourArbitrumOneRpcUrl
+SEPOLIA_RPC_URL=yourSepoliaRpcUrl
