--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,6 @@ jobs:
             frontend/dist/spa
             fleek.config.ts
             package.json
-            yarn.lock
   tests:
     runs-on: ubuntu-latest
     steps:
@@ -179,6 +178,6 @@ jobs:
       - name: Look at directory 
         run: ls -la
       - name: Install Fleek CLI
-        run: yarn install
+        run: yarn add --ignore-workspace-root-check @fleekxyz/cli
       - name: Build & deploy sites
         run: fleek sites deploy
