--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -179,4 +179,4 @@ jobs:
       - name: Install Fleek CLI
         run: volta run yarn add --ignore-workspace-root-check @fleekxyz/cli
       - name: Build & deploy sites
-        run: fleek sites deploy
+        run: volta run fleek sites deploy
