UmbraJs and frontend support for Base network

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -14,6 +14,7 @@ OPTIMISM_RPC_URL=yourRpcUrlHere
 GNOSIS_CHAIN_RPC_URL=yourRpcUrlHere
 ARBITRUM_ONE_RPC_URL=yourRpcUrlHere
 SEPOLIA_RPC_URL=yourSepoliaRpcUrl
+BASE_RPC_URL=yourBaseRpcUrl
 WALLET_CONNECT_PROJECT_ID=yourId
 
 LOG_LEVEL=DEBUG
