--- a/umbra-js/.env.example
+++ b/umbra-js/.env.example
@@ -10,3 +10,5 @@ GNOSIS_CHAIN_RPC_URL=yourGnosisChainRpcUrl
 POLYGON_RPC_URL=yourPolygonRpcUrl
 ARBITRUM_ONE_RPC_URL=yourArbitrumOneRpcUrl
 SEPOLIA_RPC_URL=yourSepoliaRpcUrl
+BASE_RPC_URL=yourBaseRpcUrl
+
