Add typescript as well

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -177,6 +177,8 @@ jobs:
       - name: Look at directory 
         run: ls -la
       - name: Install Fleek CLI
-        run: volta run yarn global add  @fleekxyz/cli
+        run: volta run yarn global add @fleekxyz/cli
+      - name: Install Fleek CLI
+        run: volta run yarn global add typescript
       - name: Build & deploy sites
         run: volta run fleek sites deploy
