Copy node_modules

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,7 @@ jobs:
           path: |
             frontend/dist/spa
             fleek.config.ts
+            node_modules
   tests:
     runs-on: ubuntu-latest
     steps:
@@ -176,9 +177,5 @@ jobs:
           cache: false
       - name: Look at directory 
         run: ls -la
-      - name: Install Typescript
-        run: volta run yarn global add typescript@^4.0.3
-      - name: Install Fleek CLI
-        run: volta run yarn global add @fleekxyz/cli
       - name: Build & deploy sites
         run: volta run fleek sites deploy
