--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -17,5 +17,13 @@ SEPOLIA_RPC_URL=yourSepoliaRpcUrl
 BASE_RPC_URL=yourBaseRpcUrl
 WALLET_CONNECT_PROJECT_ID=yourId
 
+MAINNET_SUBGRAPH_URL=
+OPTIMISM_SUBGRAPH_URL=
+GNOSIS_CHAIN_SUBGRAPH_URL=
+POLYGON_SUBGRAPH_URL=
+BASE_SUBGRAPH_URL=
+ARBITRUM_ONE_SUBGRAPH_URL=
+SEPOLIA_SUBGRAPH_URL=
+
 LOG_LEVEL=DEBUG
 MAINTENANCE_MODE_SEND=0
