Umbra-js and frontend support for Base network (#643)
* UmbraJs and frontend support for Base network

* Bumped package version to 0.1.5

* Updated startBlock of Umbra chain config for base

* Added Base chain to the UmbraJS class test

* Fix typo that was causing failing test

* Use alchemy for Base network subgraph in umbra-js

* Fix chainId used for announcements fetching error message on Base

* Updated umbra-js dependency to version 0.1.5 for Base support

* Move subgraph urls to .env

* Remove `subgraphUrl` checks in test

* Update umbra-js version to 0.1.6

* Update CI file with subgraph secrets

---------

Co-authored-by: garyghayrat <61768337+garyghayrat@users.noreply.github.com>

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -14,7 +14,16 @@ OPTIMISM_RPC_URL=yourRpcUrlHere
 GNOSIS_CHAIN_RPC_URL=yourRpcUrlHere
 ARBITRUM_ONE_RPC_URL=yourRpcUrlHere
 SEPOLIA_RPC_URL=yourSepoliaRpcUrl
+BASE_RPC_URL=yourBaseRpcUrl
 WALLET_CONNECT_PROJECT_ID=yourId
+
+MAINNET_SUBGRAPH_URL=
+OPTIMISM_SUBGRAPH_URL=
+GNOSIS_CHAIN_SUBGRAPH_URL=
+POLYGON_SUBGRAPH_URL=
+BASE_SUBGRAPH_URL=
+ARBITRUM_ONE_SUBGRAPH_URL=
+SEPOLIA_SUBGRAPH_URL=
 
 LOG_LEVEL=DEBUG
 MAINTENANCE_MODE_SEND=0
