Update fleek-cli and use json config for fleek instead

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,8 +40,6 @@ jobs:
           submodules: recursive
 
       - uses: volta-cli/action@v4
-        with:
-          cache: false
 
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
@@ -172,6 +170,7 @@ jobs:
   deploy-to-fleek:
     needs: [build]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     env:
       FLEEK_TOKEN: ${{ secrets.FLEEK_TOKEN }}
       FLEEK_PROJECT_ID: ${{ secrets.FLEEK_PROJECT_ID }}
