Fix Fleek CI deployment (#671)
* Update CI to pass along the .json config file to fleek deployment

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
           name: frontend
           path: |
             frontend/dist/spa
-            fleek.config.ts
+            fleek.config.json
   tests:
     runs-on: ubuntu-latest
     steps:
