--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.2",
-    "hardhat": "2.17.1",
+    "hardhat": "^2.22.17",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "ts-node": "^9.0.0",
