--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     ],
     "nohoist": [
       "**/mocha",
-      "**/jest"
+      "**/jest",
+      "**/hardhat",
+      "**/solidity-coverage"
     ]
   },
   "devDependencies": {
@@ -47,7 +49,7 @@
     }
   },
   "volta": {
-    "node": "20.18.0",
+    "node": "20.19.0",
     "yarn": "1.22.18"
   }
 }
