--- a/umbra-js/.nycrc
+++ b/umbra-js/.nycrc
@@ -8,6 +8,7 @@
     "node_modules/**",
     "**/*.d.ts",
     "**/*.test.ts",
+    "src/typechain/**",
     "src/index.ts",
     "types/contracts/**",
     ".eslintrc.js",
