--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,6 @@ env:
   # Subgraphs
   MAINNET_SUBGRAPH_URL: ${{ secrets.MAINNET_SUBGRAPH_URL }}
   OPTIMISM_SUBGRAPH_URL: ${{ secrets.OPTIMISM_SUBGRAPH_URL }}
-  GNOSIS_CHAIN_SUBGRAPH_URL: ${{ secrets.GNOSIS_CHAIN_SUBGRAPH_URL }}
   POLYGON_SUBGRAPH_URL: ${{ secrets.POLYGON_SUBGRAPH_URL }}
   BASE_SUBGRAPH_URL: ${{ secrets.BASE_SUBGRAPH_URL }}
   ARBITRUM_ONE_SUBGRAPH_URL: ${{ secrets.ARBITRUM_ONE_SUBGRAPH_URL }}
@@ -25,7 +24,6 @@ env:
   OPTIMISM_RPC_URL: ${{ secrets.OPTIMISM_RPC_URL }}
   ARBITRUM_ONE_RPC_URL: ${{ secrets.ARBITRUM_ONE_RPC_URL }}
   SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-  GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
   FOUNDRY_PROFILE: ci
   WALLET_CONNECT_PROJECT_ID: ${{ secrets.WALLET_CONNECT_PROJECT_ID }}
@@ -164,7 +162,7 @@ jobs:
         run: |
           cd contracts-periphery
           scopelint --version
-          scopelint check
+          FOUNDRY_DISABLE_NIGHTLY_WARNING=true scopelint check
 
   deploy-to-fleek:
     needs: [build]
